[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/io_method/scenes/edit_output_popup/edit_output_popup.gd" type="Script" id=1]

[node name="Popup" type="WindowDialog"]
margin_right = 340.0
margin_bottom = 110.0
window_title = "Output Signals"
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_right = 240.0
margin_bottom = 14.0
text = "Output signal"

[node name="OkButton" type="Button" parent="."]
margin_left = 270.0
margin_top = 70.0
margin_right = 320.0
margin_bottom = 100.0
text = "Ok"

[node name="SignalOptions" type="OptionButton" parent="."]
margin_left = 20.0
margin_top = 30.0
margin_right = 320.0
margin_bottom = 60.0
[connection signal="pressed" from="OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="item_selected" from="SignalOptions" to="." method="_on_SignalOptions_item_selected"]
